Melhoria na consulta da Api.